Implements equals() and hashcode for beans that already implement compareTo(), following the guideline : "It is strongly recommended, but not strictly required that (x.compareTo(y)==0) == (x.equals(y)). Generally speaking, any class that implements the Comparable interface and violates this condition should clearly indicate this fact. The recommended language is "Note: this class has a natural ordering that is inconsistent with equals."
Also, changing the use of Constructors for Boolean and Long to the use of the valueOf() methods.

target:
trunk

http://rb.dcache.org/r/2325/

acked by Paul